hphp/hack/test/typecheck/dynamic/arrays_assign.php.exp
File "arrays_assign.php", line 68, characters 3-17:
Typing error (Typing[4110])
  File "arrays_assign.php", line 68, characters 10-10:
  Expected `dynamic`
  File "arrays_assign.php", line 68, characters 10-10:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
File "arrays_assign.php", line 71, characters 3-13:
Typing error (Typing[4110])
  File "arrays_assign.php", line 71, characters 10-10:
  Expected `dynamic`
  File "arrays_assign.php", line 71, characters 10-10:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
File "arrays_assign.php", line 16, characters 3-12:
Invalid index type for this Map (Typing[4324])
  File "arrays_assign.php", line 15, characters 12-14:
  Expected `int`
  File "arrays_assign.php", line 13, characters 28-34:
  But got `dynamic`
File "arrays_assign.php", line 23, characters 3-12:
Invalid index type for this Map (Typing[4324])
  File "arrays_assign.php", line 22, characters 8-12:
  Expected `arraykey` because type parameter `Tk` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "arrays_assign.php", line 21, characters 24-30:
  But got `dynamic`
File "arrays_assign.php", line 38, characters 3-12:
Invalid index type for this Map (Typing[4324])
  File "arrays_assign.php", line 31, characters 8-12:
  Expected `arraykey` because type parameter `Tk` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "arrays_assign.php", line 30, characters 25-31:
  But got `dynamic`
